# Full-Stack-zkTitans-NFT-Card-Game

./: README.md
.github/FEATURE_REQUEST_TEMPLATE/: fr-template
.github/ISSUE_TEMPLATE/: findings-template.md
.github/PULL_REQUEST_TEMPLATE/: pr-template.md
1-frontend/client/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
1-frontend/client/src/: index.css  main.jsx
1-frontend/client/src/assets/: index.js
1-frontend/client/src/components/: Card.jsx  GameLoad.jsx  OnboardModal.jsx  PageHOC.jsx  PlayerInfo.jsx
1-frontend/client/src/contract/: index.js  zkTitans.json
1-frontend/client/src/page/: Battleground.jsx  CreateBattle.jsx  Home.jsx
1-frontend/client/src/styles/: index.js
1-frontend/client/src/utils/: onboard.js
2-backend/: .gitignore  pyproject.toml
2-backend/contracts/: zkTitans.vy
2-backend/script/: deploy.py
2-backend/tests/: conftest.py
2-backend/tests/unit/: test_zkTitans.py
